# pmi-pmp-study

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PMI_PMP_Study_PRD.md  README.md  docker-compose.yml  pyproject.toml
data/processed/: question_bank.json  sh_001_parsed.json  sh_001_qa.json  sh_001_skipped.json  sh_002_parsed.json  sh_002_qa.json  sh_002_skipped.json  sh_003_parsed.json  sh_003_qa.json  sh_004_parsed.json  sh_004_qa.json  sh_005_parsed.json  sh_005_qa.json  sh_006_parsed.json  sh_006_qa.json  sh_007_parsed.json  sh_007_qa.json  sh_008_parsed.json  sh_008_qa.json  sh_008_skipped.json  sh_009_parsed.json  sh_009_qa.json  sh_010_parsed.json  sh_010_qa.json  sh_010_skipped.json  sh_011_parsed.json  sh_011_qa.json  sh_012_parsed.json  sh_012_qa.json  sh_013_parsed.json  sh_013_qa.json  sh_014_parsed.json  sh_014_qa.json  sh_015_parsed.json  sh_015_qa.json  sh_016_parsed.json  sh_016_qa.json  sh_017_parsed.json  sh_017_qa.json  sh_017_skipped.json  (+11 more)
data/raw/: sh_001_paste.txt  sh_002_paste.txt  sh_003_paste.txt  sh_004_paste.txt  sh_005_paste.txt  sh_006_paste.txt  sh_007_paste.txt  sh_008_paste.txt  sh_009_paste.txt  sh_010_paste.txt  sh_011_paste.txt  sh_012_paste.txt  sh_013_paste.txt  (+22 more)
docs/: analytics-plan.md
front-end/: .dockerignore  .gitignore  Dockerfile.dev  PRD.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ingestion/: pdf_extractor.py  qa_extractor.py  qa_formatter.py  quiz_builder.py  sources.yml  studyhall_extractor.py  youtube_extractor.py
tests/: test_quiz_results.py
(+212 files in other folders)
